# codevector

./: .eslintrc.json  .gitignore  PRD.md  README.md  TDD.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
rust-hnsw/: Cargo.toml
rust-hnsw/src/: lib.rs
src/: extension.ts
src/application/: GetIndexStatusUseCase.ts  IndexWorkspaceUseCase.ts  ReindexFileUseCase.ts  SearchUseCase.test.ts  SearchUseCase.ts  index.ts
src/domain/: CodeChunk.ts  SearchQuery.ts  SearchResult.ts  index.ts
src/infrastructure/bm25/: BM25Index.test.ts  BM25Index.ts  index.ts
src/infrastructure/chunker/: TreeSitterChunker.ts  index.ts
src/infrastructure/embeddings/: EmbeddingService.ts  index.ts
src/infrastructure/metadata/: MetadataRepository.ts  index.ts
src/infrastructure/vector/: IVectorIndex.ts  WasmHNSWVectorIndex.ts  index.ts
src/mcp/: server.ts
src/presentation/commands/: IndexCommand.ts  SearchCommand.ts  StatusCommand.ts  index.ts
worker/: embedding.worker.d.ts  embedding.worker.d.ts.map  embedding.worker.js  embedding.worker.js.map  embedding.worker.ts
